// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test creation of a simple Datagrid component (inherit) 1`] = `
<Datagrid
  backgroundColor={null}
  border={null}
  borderColor={null}
  bottom={null}
  className={null}
  color={null}
  columns={
    Array [
      Object {
        "key": "id",
        "name": "ID",
        "sortable": true,
      },
      Object {
        "key": "title",
        "name": "Title",
      },
      Object {
        "key": "count",
        "name": "Count",
      },
    ]
  }
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  id={null}
  left={null}
  location="none"
  maxHeight={null}
  maxWidth={null}
  minHeight={null}
  minWidth={null}
  noborder={false}
  noedit={false}
  nohover={false}
  notheme={false}
  notooltip={false}
  obj="Datagrid"
  padding={null}
  ripple={false}
  rows={
    Array [
      Object {
        "count": 20,
        "id": 0,
        "title": "row1",
      },
      Object {
        "count": 234,
        "id": 1,
        "title": "row2",
      },
      Object {
        "count": 2255,
        "id": 2,
        "title": "row3",
      },
      Object {
        "count": 8345,
        "id": 3,
        "title": "row4",
      },
    ]
  }
  selected={false}
  sizing="inherit"
  style={Object {}}
  testing={true}
  theme={null}
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
/>
`;

exports[`Test creation of a simple Datagrid component (large) 1`] = `
<Datagrid
  backgroundColor={null}
  border={null}
  borderColor={null}
  bottom={null}
  className={null}
  color={null}
  columns={
    Array [
      Object {
        "key": "id",
        "name": "ID",
        "sortable": true,
      },
      Object {
        "key": "title",
        "name": "Title",
      },
      Object {
        "key": "count",
        "name": "Count",
      },
    ]
  }
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  id={null}
  left={null}
  location="none"
  maxHeight={null}
  maxWidth={null}
  minHeight={null}
  minWidth={null}
  noborder={false}
  noedit={false}
  nohover={false}
  notheme={false}
  notooltip={false}
  obj="Datagrid"
  padding={null}
  ripple={false}
  rows={
    Array [
      Object {
        "count": 20,
        "id": 0,
        "title": "row1",
      },
      Object {
        "count": 234,
        "id": 1,
        "title": "row2",
      },
      Object {
        "count": 2255,
        "id": 2,
        "title": "row3",
      },
      Object {
        "count": 8345,
        "id": 3,
        "title": "row4",
      },
    ]
  }
  selected={false}
  sizing="large"
  style={Object {}}
  testing={true}
  theme={null}
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
/>
`;

exports[`Test creation of a simple Datagrid component (medium) 1`] = `
<Datagrid
  backgroundColor={null}
  border={null}
  borderColor={null}
  bottom={null}
  className={null}
  color={null}
  columns={
    Array [
      Object {
        "key": "id",
        "name": "ID",
        "sortable": true,
      },
      Object {
        "key": "title",
        "name": "Title",
      },
      Object {
        "key": "count",
        "name": "Count",
      },
    ]
  }
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  id={null}
  left={null}
  location="none"
  maxHeight={null}
  maxWidth={null}
  minHeight={null}
  minWidth={null}
  noborder={false}
  noedit={false}
  nohover={false}
  notheme={false}
  notooltip={false}
  obj="Datagrid"
  padding={null}
  ripple={false}
  rows={
    Array [
      Object {
        "count": 20,
        "id": 0,
        "title": "row1",
      },
      Object {
        "count": 234,
        "id": 1,
        "title": "row2",
      },
      Object {
        "count": 2255,
        "id": 2,
        "title": "row3",
      },
      Object {
        "count": 8345,
        "id": 3,
        "title": "row4",
      },
    ]
  }
  selected={false}
  sizing="medium"
  style={Object {}}
  testing={true}
  theme={null}
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
/>
`;

exports[`Test creation of a simple Datagrid component (normal) 1`] = `
<Datagrid
  backgroundColor={null}
  border={null}
  borderColor={null}
  bottom={null}
  className={null}
  color={null}
  columns={
    Array [
      Object {
        "key": "id",
        "name": "ID",
        "sortable": true,
      },
      Object {
        "key": "title",
        "name": "Title",
      },
      Object {
        "key": "count",
        "name": "Count",
      },
    ]
  }
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  id={null}
  left={null}
  location="none"
  maxHeight={null}
  maxWidth={null}
  minHeight={null}
  minWidth={null}
  noborder={false}
  noedit={false}
  nohover={false}
  notheme={false}
  notooltip={false}
  obj="Datagrid"
  padding={null}
  ripple={false}
  rows={
    Array [
      Object {
        "count": 20,
        "id": 0,
        "title": "row1",
      },
      Object {
        "count": 234,
        "id": 1,
        "title": "row2",
      },
      Object {
        "count": 2255,
        "id": 2,
        "title": "row3",
      },
      Object {
        "count": 8345,
        "id": 3,
        "title": "row4",
      },
    ]
  }
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={null}
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
/>
`;

exports[`Test creation of a simple Datagrid component (small) 1`] = `
<Datagrid
  backgroundColor={null}
  border={null}
  borderColor={null}
  bottom={null}
  className={null}
  color={null}
  columns={
    Array [
      Object {
        "key": "id",
        "name": "ID",
        "sortable": true,
      },
      Object {
        "key": "title",
        "name": "Title",
      },
      Object {
        "key": "count",
        "name": "Count",
      },
    ]
  }
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  id={null}
  left={null}
  location="none"
  maxHeight={null}
  maxWidth={null}
  minHeight={null}
  minWidth={null}
  noborder={false}
  noedit={false}
  nohover={false}
  notheme={false}
  notooltip={false}
  obj="Datagrid"
  padding={null}
  ripple={false}
  rows={
    Array [
      Object {
        "count": 20,
        "id": 0,
        "title": "row1",
      },
      Object {
        "count": 234,
        "id": 1,
        "title": "row2",
      },
      Object {
        "count": 2255,
        "id": 2,
        "title": "row3",
      },
      Object {
        "count": 8345,
        "id": 3,
        "title": "row4",
      },
    ]
  }
  selected={false}
  sizing="small"
  style={Object {}}
  testing={true}
  theme={null}
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
/>
`;

exports[`Test creation of a simple Datagrid component (xlarge) 1`] = `
<Datagrid
  backgroundColor={null}
  border={null}
  borderColor={null}
  bottom={null}
  className={null}
  color={null}
  columns={
    Array [
      Object {
        "key": "id",
        "name": "ID",
        "sortable": true,
      },
      Object {
        "key": "title",
        "name": "Title",
      },
      Object {
        "key": "count",
        "name": "Count",
      },
    ]
  }
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  id={null}
  left={null}
  location="none"
  maxHeight={null}
  maxWidth={null}
  minHeight={null}
  minWidth={null}
  noborder={false}
  noedit={false}
  nohover={false}
  notheme={false}
  notooltip={false}
  obj="Datagrid"
  padding={null}
  ripple={false}
  rows={
    Array [
      Object {
        "count": 20,
        "id": 0,
        "title": "row1",
      },
      Object {
        "count": 234,
        "id": 1,
        "title": "row2",
      },
      Object {
        "count": 2255,
        "id": 2,
        "title": "row3",
      },
      Object {
        "count": 8345,
        "id": 3,
        "title": "row4",
      },
    ]
  }
  selected={false}
  sizing="xlarge"
  style={Object {}}
  testing={true}
  theme={null}
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
/>
`;

exports[`Test creation of a simple Datagrid component (xsmall) 1`] = `
<Datagrid
  backgroundColor={null}
  border={null}
  borderColor={null}
  bottom={null}
  className={null}
  color={null}
  columns={
    Array [
      Object {
        "key": "id",
        "name": "ID",
        "sortable": true,
      },
      Object {
        "key": "title",
        "name": "Title",
      },
      Object {
        "key": "count",
        "name": "Count",
      },
    ]
  }
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  id={null}
  left={null}
  location="none"
  maxHeight={null}
  maxWidth={null}
  minHeight={null}
  minWidth={null}
  noborder={false}
  noedit={false}
  nohover={false}
  notheme={false}
  notooltip={false}
  obj="Datagrid"
  padding={null}
  ripple={false}
  rows={
    Array [
      Object {
        "count": 20,
        "id": 0,
        "title": "row1",
      },
      Object {
        "count": 234,
        "id": 1,
        "title": "row2",
      },
      Object {
        "count": 2255,
        "id": 2,
        "title": "row3",
      },
      Object {
        "count": 8345,
        "id": 3,
        "title": "row4",
      },
    ]
  }
  selected={false}
  sizing="xsmall"
  style={Object {}}
  testing={true}
  theme={null}
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
/>
`;

exports[`Test creation of a simple Datagrid component (xxlarge) 1`] = `
<Datagrid
  backgroundColor={null}
  border={null}
  borderColor={null}
  bottom={null}
  className={null}
  color={null}
  columns={
    Array [
      Object {
        "key": "id",
        "name": "ID",
        "sortable": true,
      },
      Object {
        "key": "title",
        "name": "Title",
      },
      Object {
        "key": "count",
        "name": "Count",
      },
    ]
  }
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  id={null}
  left={null}
  location="none"
  maxHeight={null}
  maxWidth={null}
  minHeight={null}
  minWidth={null}
  noborder={false}
  noedit={false}
  nohover={false}
  notheme={false}
  notooltip={false}
  obj="Datagrid"
  padding={null}
  ripple={false}
  rows={
    Array [
      Object {
        "count": 20,
        "id": 0,
        "title": "row1",
      },
      Object {
        "count": 234,
        "id": 1,
        "title": "row2",
      },
      Object {
        "count": 2255,
        "id": 2,
        "title": "row3",
      },
      Object {
        "count": 8345,
        "id": 3,
        "title": "row4",
      },
    ]
  }
  selected={false}
  sizing="xxlarge"
  style={Object {}}
  testing={true}
  theme={null}
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
/>
`;

exports[`Test creation of a simple Datagrid component (xxsmall) 1`] = `
<Datagrid
  backgroundColor={null}
  border={null}
  borderColor={null}
  bottom={null}
  className={null}
  color={null}
  columns={
    Array [
      Object {
        "key": "id",
        "name": "ID",
        "sortable": true,
      },
      Object {
        "key": "title",
        "name": "Title",
      },
      Object {
        "key": "count",
        "name": "Count",
      },
    ]
  }
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  id={null}
  left={null}
  location="none"
  maxHeight={null}
  maxWidth={null}
  minHeight={null}
  minWidth={null}
  noborder={false}
  noedit={false}
  nohover={false}
  notheme={false}
  notooltip={false}
  obj="Datagrid"
  padding={null}
  ripple={false}
  rows={
    Array [
      Object {
        "count": 20,
        "id": 0,
        "title": "row1",
      },
      Object {
        "count": 234,
        "id": 1,
        "title": "row2",
      },
      Object {
        "count": 2255,
        "id": 2,
        "title": "row3",
      },
      Object {
        "count": 8345,
        "id": 3,
        "title": "row4",
      },
    ]
  }
  selected={false}
  sizing="xxsmall"
  style={Object {}}
  testing={true}
  theme={null}
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
/>
`;

exports[`Test retrieval of Datagrid props object 1`] = `
Object {
  "backgroundColor": null,
  "border": null,
  "borderColor": null,
  "bottom": null,
  "children": null,
  "className": null,
  "color": null,
  "columns": Array [],
  "controlled": true,
  "direction": "right",
  "disabled": false,
  "err": null,
  "errorMessage": null,
  "focus": false,
  "height": null,
  "id": null,
  "left": null,
  "location": "none",
  "maxHeight": null,
  "maxWidth": null,
  "minHeight": null,
  "minWidth": null,
  "noborder": false,
  "noedit": false,
  "nohover": false,
  "notheme": false,
  "notooltip": false,
  "obj": "Datagrid",
  "padding": null,
  "ripple": false,
  "rows": Array [],
  "selected": false,
  "sizing": "normal",
  "style": Object {},
  "testing": true,
  "theme": null,
  "tooltip": null,
  "top": null,
  "visible": true,
  "width": null,
  "xcss": null,
}
`;

exports[`Test retrieval of Datagrid props object 2`] = `
Object {
  "children": null,
  "sizing": "normal",
  "style": Object {},
}
`;
